--- a/www/kerbit/package.json
+++ b/www/kerbit/package.json
@@ -2,7 +2,9 @@
   "name": "kerbit",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "test": "./node_modules/mocha/bin/mocha"
+
   },
   "dependencies": {
     "meteor-node-stubs": "~0.2.0"
