--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,17 @@
+sudo: false
+
 language: node_js
+
 node_js:
-  - "0.12"
+  - "0.10.41"
+
+notifications:
+  slack:
+    secure: Sp0XScJQvQJmAD842c3+NRfcz/kmY3t01vyqcqywGBp+AtpYrTCT8ZXWzxSsS5+0Zyxbw5qHo+cApjvaP3pWKRYYoCz8OQ41cJ5m7CauvRXhLNlGph9fzSk5f1s6Ut1efXlFRY/DQhFPuHw8OdsrahIrgoLSYoJvPU3oc2aBszo=
+
 before_install:
-  - "curl -L https://raw.githubusercontent.com/arunoda/travis-ci-laika/master/configure.sh | /bin/sh"
-services:
-  - mongodb
-env:
-  - LAIKA_OPTIONS="-t 5000"
+  - "curl https://install.meteor.com | /bin/sh"
+  - "npm install -g spacejam"
+  - export PATH="$HOME/.meteor:$PATH"
+
+script: "spacejam test-packages ./"
