--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,19 @@ sudo: false
 
 language: node_js
 
-node_js:
-  - "0.10.41"
-
-notifications:
-  slack:
-    secure: Sp0XScJQvQJmAD842c3+NRfcz/kmY3t01vyqcqywGBp+AtpYrTCT8ZXWzxSsS5+0Zyxbw5qHo+cApjvaP3pWKRYYoCz8OQ41cJ5m7CauvRXhLNlGph9fzSk5f1s6Ut1efXlFRY/DQhFPuHw8OdsrahIrgoLSYoJvPU3oc2aBszo=
-
 before_install:
-  - "curl https://install.meteor.com | /bin/sh"
-  - "npm install -g spacejam"
-  - export PATH="$HOME/.meteor:$PATH"
+  - curl https://install.meteor.com | /bin/sh
+  - export PATH="$HOME/www/kerbit/.meteor:$PATH"
 
-script: "spacejam test-packages ./"
+cache:
+  directories:
+    - node_modules
+
+before_script:
+  - meteor npm install
+
+script:
+  - meteor remove practicalmeteor:mocha
+  - meteor add dispatch:mocha-phantomjs
+  - meteor test --once --driver-package dispatch:mocha-phantomjs
+  - meteor build $HOME/build.tgz
