--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,7 @@ before_script:
 
 script:
   - meteor test --once --driver-package dispatch:mocha-phantomjs
+
+notifications:
+  slack: curbit:deFtjCAGd3vlfhrJzEefCymO
+  email: false
