--- a/www/kerbit/package.json
+++ b/www/kerbit/package.json
@@ -2,8 +2,7 @@
   "name": "kerbit",
   "private": true,
   "scripts": {
-    "start": "meteor run",
-
+    "start": "meteor run"
   },
   "dependencies": {
     "meteor-node-stubs": "~0.2.0"
