--- a/kerbit/kerbit/Info.plist
+++ b/kerbit/kerbit/Info.plist
@@ -22,6 +22,11 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>By accessing your location, this app allows you to set pickup locations near you with ease.</string>
 	<key>UILaunchStoryboardName</key>
